--- a/bin/gui/MRUV.fxml
+++ b/bin/gui/MRUV.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -17,15 +18,31 @@
          <font>
             <Font size="22.0" />
          </font></Label>
-         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="151.0" layoutY="28.0" text="CineCalc: Soluções Dinâmicas" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="28.0">
+         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="150.0" layoutY="47.0" prefHeight="56.0" prefWidth="1068.0" text="Movimento Retilíneo Uniforme Variado (MRUV)" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="62.0" AnchorPane.topAnchor="47.0">
              <font>
-                 <Font name="Verdana" size="60.0" />
+                 <Font name="Verdana" size="44.0" />
              </font>
          </Label>
-      <Button layoutX="526.0" layoutY="298.0" mnemonicParsing="false" text="Movimento Retilíneo Uniforme - MRU" />
-      <Button layoutX="482.0" layoutY="208.0" mnemonicParsing="false" text="Movimento Retilíneo Uniformemente Variado - MRUV)" />
-      <Button layoutX="526.0" layoutY="393.0" mnemonicParsing="false" text="2D (Movimento em Duas Dimensões)" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccdae7" height="35.0" layoutX="223.0" layoutY="496.0" stroke="BLACK" strokeType="INSIDE" width="783.0" />
-      <Text layoutX="321.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Criado por academicos da universidade Federal de Rondônia Jáder Louis, Nicolas Sales, Wyllgner França (JNW)." />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccdae7" height="35.0" layoutX="222.0" layoutY="550.0" stroke="BLACK" strokeType="INSIDE" width="783.0" />
+      <Text layoutX="242.0" layoutY="572.0" strokeType="OUTSIDE" strokeWidth="0.0" text="O MRUV é o deslocamento de um corpo no espaço, que ocorre em uma trajetória retilínea, ou seja, que não pertence a qualquer curva ou circunferência.">
+         <font>
+            <Font size="11.0" />
+         </font></Text>
+      <TextField fx:id="velocityInitialField" layoutX="539.0" layoutY="174.0" promptText="Velocidade Inicial (v0)" />
+      <TextField fx:id="velocityFinalField" layoutX="540.0" layoutY="234.0" promptText="Velocidade Final (v)" />
+      <TextField fx:id="positionInitialField" layoutX="540.0" layoutY="300.0" promptText="Posição Inicial (s0)" />
+      <TextField fx:id="positionFinalField" layoutX="540.0" layoutY="368.0" promptText="Posição Final (s)" />
+      <TextField fx:id="timeField" layoutX="539.0" layoutY="434.0" promptText="Tempo (t)" />
+      <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="117.0" layoutY="177.0" prefHeight="247.0" prefWidth="382.0" text="(AVISO OU RESULTADO)">
+         <font>
+            <Font size="11.0" />
+         </font></Label>
+      <Button fx:id="calcButton" layoutX="589.0" layoutY="495.0" mnemonicParsing="false" onAction="#handleCalculate" text="Calcular" />
+      <Text layoutX="540.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade Inicial V0:" />
+      <Text layoutX="540.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade Final v:" />
+      <Text layoutX="540.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Posição Inicial s0: " />
+      <Text layoutX="540.0" layoutY="365.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Posição Final (s) :" />
+      <Text layoutX="724.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Aceleraçao (a)" />
+      <TextField fx:id="acel" layoutX="724.0" layoutY="234.0" promptText="Aceleracao (a)" />
     </children>
 </AnchorPane>
