--- a/bin/gui/MRUV.fxml
+++ b/bin/gui/MRUV.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -44,5 +45,13 @@
       <Text layoutX="540.0" layoutY="365.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Posição Final (s) :" />
       <Text layoutX="724.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Aceleraçao (a)" />
       <TextField fx:id="acel" layoutX="724.0" layoutY="234.0" promptText="Aceleracao (a)" />
+      <ComboBox fx:id="velUni" layoutX="918.0" layoutY="174.0" prefWidth="150.0" promptText="Unidade de Velocidade" />
+      <ComboBox fx:id="spaceUni" layoutX="918.0" layoutY="292.0" prefWidth="150.0" promptText="Unidade de Espaço" />
+      <ComboBox fx:id="timeUni" layoutX="918.0" layoutY="434.0" prefWidth="150.0" promptText="Unidade de Tempo" />
+      <Text layoutX="855.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Antes de começar a calcular selecione as unidades de tempo! ">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
