--- a/src/gui/TwoD.fxml
+++ b/src/gui/TwoD.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -9,13 +10,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.MRUController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.TwoDController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccdae7" height="104.0" layoutX="27.0" layoutY="479.0" stroke="BLACK" strokeType="INSIDE" width="484.0" />
-      <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="34.0" layoutY="484.0" prefHeight="94.0" prefWidth="457.0" text="(AVISO OU RESULTADO)" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccdae7" height="192.0" layoutX="14.0" layoutY="497.0" stroke="BLACK" strokeType="INSIDE" width="501.0" />
+      <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="14.0" layoutY="497.0" prefHeight="192.0" prefWidth="501.0" text="(AVISO OU RESULTADO)" />
       <Text layoutX="561.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade vertical (Vy):" wrappingWidth="134.52032470703125" />
       <Separator layoutY="47.0" prefHeight="172.0" prefWidth="1280.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0" />
-      <Separator layoutY="325.0" prefHeight="185.0" prefWidth="1280.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Separator layoutY="637.0" prefHeight="185.0" prefWidth="1280.0" AnchorPane.bottomAnchor="-102.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Label layoutX="1066.0" layoutY="624.0" prefHeight="82.0" prefWidth="217.0" text="version dev-mode" AnchorPane.bottomAnchor="13.600000000000023" AnchorPane.rightAnchor="-3.599999999999909">
          <font>
             <Font size="22.0" />
@@ -30,23 +31,24 @@
       <TextField fx:id="velocityFinalField" layoutX="554.0" layoutY="173.0" promptText="Velocidade (V)" />
       <TextField fx:id="initialVerticalVelocityField" layoutX="374.0" layoutY="241.0" promptText="Velocidade Vertical Inicial (Vy0):" />
       <TextField fx:id="finalVerticalVelocityField" layoutX="552.0" layoutY="241.0" promptText="Velocidade vertical (Vy):" />
-      <TextField fx:id="gravityField" layoutX="552.0" layoutY="309.0" promptText="Gravidade (g)" />
-      <Button fx:id="calcButton" layoutX="553.0" layoutY="559.0" mnemonicParsing="false" onAction="#handleCalculate" prefHeight="26.0" prefWidth="150.0" text="Calcular" />
+      <Button fx:id="calcButton" layoutX="554.0" layoutY="484.0" mnemonicParsing="false" onAction="#handleCalculate" prefHeight="26.0" prefWidth="150.0" text="Calcular" />
       <Text layoutX="388.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade Inicial (V0):" />
       <Text layoutX="580.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade (V):" />
       <Text layoutX="378.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade Horizontal (Vx):" />
       <TextField fx:id="HorizontalVelocity" layoutX="374.0" layoutY="309.0" promptText="Velocidade Horizontal (Vx):" />
-      <Text layoutX="591.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gravidade (g)" />
       <Text layoutX="369.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velocidade Vertical Inicial (Vy0):" wrappingWidth="167.99996337890616" />
       <TextField fx:id="maxHeightField" layoutX="375.0" layoutY="373.0" promptText="Altura Máxima (hmax):" />
-      <Text layoutX="600.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Altura (h):" wrappingWidth="56.19488525390625" />
+      <Text layoutX="600.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Altura (h):" wrappingWidth="56.19488525390625" />
       <Text layoutX="382.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Altura Máxima (hmax):" wrappingWidth="134.52032470703125" />
-      <TextField fx:id="heightField" layoutX="552.0" layoutY="373.0" promptText="Altura (h):" />
-      <Text layoutX="598.0" layoutY="493.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tempo (t):" wrappingWidth="56.19488525390625" />
+      <TextField fx:id="heightField" layoutX="554.0" layoutY="309.0" promptText="Altura (h):" />
+      <Text layoutX="600.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tempo (t):" wrappingWidth="56.19488525390625" />
       <Text layoutX="377.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alpha (alpha):" wrappingWidth="102.47344970703125" />
-      <Text layoutX="600.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Range  (r):" wrappingWidth="56.19488525390625" />
+      <Text layoutX="600.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Range  (r):" wrappingWidth="56.19488525390625" />
       <TextField fx:id="alphaField" layoutX="377.0" layoutY="439.0" promptText="Alpha:" />
-      <TextField fx:id="rangeField" layoutX="553.0" layoutY="439.0" promptText="Range:" />
-      <TextField fx:id="timeField" layoutX="554.0" layoutY="497.0" promptText="Tempo (t):" />
+      <TextField fx:id="rangeField" layoutX="554.0" layoutY="373.0" promptText="Range:" />
+      <TextField fx:id="timeField" layoutX="554.0" layoutY="439.0" promptText="Tempo (t):" />
+      <ComboBox fx:id="timeUni" layoutX="764.0" layoutY="173.0" prefWidth="150.0" promptText="Unidade de Tempo" />
+      <ComboBox fx:id="spaceUni" layoutX="764.0" layoutY="279.0" prefWidth="150.0" promptText="Unidade de Espaco" />
+      <ComboBox fx:id="velUni" layoutX="764.0" layoutY="398.0" prefWidth="150.0" promptText="Unidade de Velocidade" />
    </children>
 </AnchorPane>
